--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/innovme/desafio-innov.me-1#readme",
   "devDependencies": {
+    "@types/node": "^14.6.2",
     "typescript": "^4.0.2"
   }
 }
