--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "devDependencies": {
     "@types/node": "^14.6.2",
     "typescript": "^4.0.2"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.7",
+    "express": "^4.17.1"
   }
 }
