--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "desafio-innov.me-1",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/main/app.ts",
   "scripts": {
+    "start": "sucrase-node src/main/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,10 +16,12 @@
   "homepage": "https://bitbucket.org/innovme/desafio-innov.me-1#readme",
   "devDependencies": {
     "@types/node": "^14.6.2",
+    "sucrase": "^3.15.0",
     "typescript": "^4.0.2"
   },
   "dependencies": {
     "@types/express": "^4.17.7",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
 }
