--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   },
   "dependencies": {
     "@types/express": "^4.17.7",
+    "@types/validator": "^13.1.0",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "moment": "^2.27.0",
+    "validator": "^13.1.1"
   }
 }
