feat: add JiraConsult and AxiosAdapter

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-TOKEN_JIRA=bWF0ZXVzQHVwZmxvdy5tZTp5MmZsZ3pKNkMwNGhicTc0YlRGNTlGNTM=
+URL_JIRA_API='https://upflow.atlassian.net'
+TOKEN_JIRA='bWF0ZXVzQHVwZmxvdy5tZTp5MmZsZ3pKNkMwNGhicTc0YlRGNTlGNTM='
