--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.7",
     "@types/validator": "^13.1.0",
+    "axios": "^0.20.0",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "moment": "^2.27.0",
     "validator": "^13.1.1"
