--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
     "@types/validator": "^13.1.0",
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "moment": "^2.27.0",
